fix invalid ContainsFiles namespace; fix links being barely visible with dark theme

--- a/assets/admin_assets/css/dashboard.css
+++ b/assets/admin_assets/css/dashboard.css
@@ -104,3 +104,12 @@ body {
   border-color: transparent;
   box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
 }
+
+
+html[data-bs-theme="dark"] .nav-link {
+    color: #aaa !important;
+}
+
+html[data-bs-theme="dark"] .nav-link.active {
+    color: #fff !important;
+}
